
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned int UNESCAPE_HEX ;
 unsigned int UNESCAPE_OCTAL ;
 unsigned int UNESCAPE_SPACE ;
 unsigned int UNESCAPE_SPECIAL ;
 scalar_t__ unescape_hex (char**,char**) ;
 scalar_t__ unescape_octal (char**,char**) ;
 scalar_t__ unescape_space (char**,char**) ;
 scalar_t__ unescape_special (char**,char**) ;

int string_unescape(char *src, char *dst, size_t size, unsigned int flags)
{
 char *out = dst;

 while (*src && --size) {
  if (src[0] == '\\' && src[1] != '\0' && size > 1) {
   src++;
   size--;

   if (flags & UNESCAPE_SPACE &&
     unescape_space(&src, &out))
    continue;

   if (flags & UNESCAPE_OCTAL &&
     unescape_octal(&src, &out))
    continue;

   if (flags & UNESCAPE_HEX &&
     unescape_hex(&src, &out))
    continue;

   if (flags & UNESCAPE_SPECIAL &&
     unescape_special(&src, &out))
    continue;

   *out++ = '\\';
  }
  *out++ = *src++;
 }
 *out = '\0';

 return out - dst;
}
